--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
-    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-scroll": "^1.9.0",
-    "react-spring": "^9.7.3",
-    "react-transition-group": "^4.4.5"
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
